(copy_files ../unikernel.ml)

(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../../mirage.fpp)
  (:cfg ../config.fpp))
 (action
  (run %{bin:ofpp} to-ml -t hvt --topologies Solo5Ping6 %{fpp} %{cfg})))

(library
 (name ping6_hvt)
 (modules main unikernel)
 (libraries
  lwt
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-solo5
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.solo5
  mirage-mtime.solo5
  mirage-ptime
  mirage-ptime.solo5
  logs
  fmt
  mirage-net-solo5
  ethernet
  tcpip.ipv6
  ipaddr
  cstruct))

(alias
 (name runtest)
 (deps
  (alias_rec all)))
