(rule
 (target main.ml)
 (deps
  (:t ../../../types.fpp)
  (:d ../../../devices.fpp)
  (:s ../../../stacks.fpp)
  (:a ../../../applications.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixTimeout1 %{t} %{d} %{s} %{a}))))

(executable
 (name main)
 (modules main unikernel)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  randomconv))

(alias
 (name runtest)
 (deps main.exe))
